# wiring

./: Cargo.toml  README.md
examples/: Cargo.toml  channel.rs  hello_world.rs  nested.rs  wired.rs
wiring/: Cargo.toml  README.md
wiring-derive/: Cargo.toml
wiring-derive/src/: lib.rs
wiring/benches/: benches.rs
wiring/src/: lib.rs  test.rs
wiring/src/core/: listener.rs  mod.rs  unwire.rs  wire.rs  wired.rs
