[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
wiring = {path = "../wiring"}
wiring-derive = {path = "../wiring-derive"}

tokio = {version = "1.0", features = ["full"]}

[[example]]
name = "hello-world"
path = "hello_world.rs"

[[example]]
name = "channel"
path = "channel.rs"

[[example]]
name = "nested"
path = "nested.rs"

[[example]]
name = "wired"
path = "wired.rs"