[package]
name = "wiring-derive"
version = "0.2.1"
edition = "2021"
authors = ["Louay Kamel"]
license-file = "LICENSE"
repository = "https://github.com/louaykamel/wiring"
description = "A macro helper crate for wiring"
keywords = ["wiring", "macro", "derive"]
exclude = [".github/**/*"]

[lib]
proc-macro = true

[dependencies]

proc-macro2 = { version = "1.0.79" }
quote = { version = "1.0.35" }
syn = { version = "2.0.58" }
