[package]
name = "wiring"
version = "0.2.3"
edition = "2021"
authors = ["Louay Kamel"]
license-file = "LICENSE"
repository = "https://github.com/louaykamel/wiring"
description = "An async binary serialization framework with channels support"
keywords = ["wiring", "async", "serialization", "rpc"]
exclude = [".github/**/*"]

[dependencies]
tokio = { version = "1.37.0", features = ["sync", "rt", "net", "io-util", "macros"] }
futures = {version = "0.3"}

rand ="0.8"
url = "2.5"
pin-project = "1.1"
tokio-stream = {version = "0.1", features = ["sync"]}

wiring-derive = { version = "0.2" }
criterion = "0.5.1"
bencher = "0.1.5"
simdutf8 = "0.1.4"

[dev-dependencies]
rand = "0.8"

[features]
default = []
generic_const_exprs = []

[[bench]]
name = "benches"
harness = false
lto = true

[profile.release]
lto = true

[profile.bench]
lto = true
